# scenegraph

./: CMakeLists.txt  README.md
cmake/: AddCXXCompilerFlag.cmake
include/scenegraph/: ApplicationContext.h  BitUtils.h  Component.h  Component.inl  ComponentFactory.h  ComponentTypes.h  ForwardList.h  Hierarchy.h  MonotonicAllocator.h  NewDeleteAllocator.h  PoolAllocator.h  Scene.h  Scene.inl  SceneEntity.h  SceneObject.h  SceneObject.inl  SceneString.h  ScopeGuard.h  StaticImpl.h  SystemContext.h
include/scenegraph/components/: Transform2DComponent.h  TransformComponent.h
include/scenegraph/geometry/: Frustum.h  Matrix3.h  Matrix32.h  Matrix4.h  Matrix43.h  Plane.h  Quaternion.h  Sphere.h  Vector3.h
include/scenegraph/gpu/: Buffer.h  Resource.h  TransferBuffer.h
include/scenegraph/imaging/: Color.h
include/scenegraph/linked/: ForwardList.h  Hierarchy.h
include/scenegraph/math/: Frustum.h  Matrix32.h  Matrix4.h  Plane.h  Quaternion.h  Sphere.h  Transform.h  Transform2D.h  Vector2.h  Vector3.h
include/scenegraph/memory/: BasicAllocator.h  MonotonicAllocator.h  NewDeleteAllocator.h  NullAllocator.h  PoolAllocator.h
include/scenegraph/render/: Vertex.h
include/scenegraph/threading/: WorkThread.h
include/scenegraph/utils/: BitUtils.h  FloatUtils.h  IteratorUtils.h  MemoryUtils.h  MurmurHash.h  NonCopyable.h  Passkey.h  ScopeGuard.h  StaticImpl.h
scripts/: runcmake.sh  runxcode.sh
sgapp/: CMakeLists.txt  Imaging.cpp  Imaging.h  Shader.cpp  Shader.h  main.cpp
sgapp/assets-sources/shaders/: PositionColorTransform.vert.hlsl  PullSpriteBatch.vert.hlsl  TexturedQuadColor.frag.hlsl
sgapp/assets/shaders/: PositionColor.vert.air  PositionColor.vert.dxil  PositionColor.vert.json  PositionColorTransform.vert.air  PositionColorTransform.vert.dxil  PositionColorTransform.vert.json  PositionColorTransform.vert.spv  PullSpriteBatch.vert.air  PullSpriteBatch.vert.dxil  PullSpriteBatch.vert.spv  SolidColor.frag.air  TexturedQuadColor.frag.air
sgapp/assets/textures/: checkerboard.qoi  chessboard.qoi  three-color-checkerboard.qoi
sgapp/shaders/: PositionColor.vert.h  PositionColorTransform.vert.h  PullSpriteBatch.vert.h  SolidColor.frag.h  TexturedQuadColor.frag.h
sgbenchmark/: CMakeLists.txt  main.cpp
sgtest/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/scenegraph/: ApplicationContext.cpp  Component.cpp  ComponentFactory.cpp  Imaging.cpp  Scene.cpp  SceneEntity.cpp  SceneNode.cpp  SceneNode.h  SceneObject.cpp  SceneString.cpp  SystemContext.cpp  main.cpp
src/scenegraph/geometry/: Frustum.cpp  Matrix3.cpp  Matrix32.cpp  Matrix4.cpp  Matrix43.cpp  Plane.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/scenegraph/gpu/: Buffer.cpp  Resource.cpp  TransferBuffer.cpp
src/scenegraph/math/: Frustum.cpp  Matrix3.cpp  Matrix4.cpp  Matrix43.cpp  Quaternion.cpp  Vector3.cpp  Vector4.cpp
src/scenegraph/threading/: WorkThread.cpp
